@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-19T00:50:21Z",
+  "timestamp" : "2022-06-20T00:49:41Z",
   "count_outdated" : 407,
   "uniques_outdated" : 24,
-  "count" : 421,
-  "uniques" : 29,
+  "count" : 424,
+  "uniques" : 30,
   "views" : [
     {
       "timestamp": "2022-06-08T00:00:00Z",
@@ -37,6 +37,13 @@
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 4,
       "count_minmax": [ 4, 4 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-19T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
