@@ -1,5 +1,5 @@
 {
-  "count": 14,
+  "count": 17,
   "uniques": 1,
   "views": [
     {
@@ -25,6 +25,11 @@
     {
       "timestamp": "2022-06-18T00:00:00Z",
       "count": 4,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-19T00:00:00Z",
+      "count": 3,
       "uniques": 1
     }
   ]
