@@ -1,3 +1,10 @@
+2022-06-20T00:49:41Z:
+* notice: last 14d: unq all: 1 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 24 407 / 29 421
+* notice: next accum: outdated-unq outdated-all / unq all: 24 407 / 30 424
+* notice: prev exec diff / last date diff / accum: unq all: +1 +3 -0 -0 / +1 +3 -0 -0 / 1 3
+* notice: removed / changed dates: [] / [2022-06-19]
+
 2022-06-19T00:50:21Z:
 * notice: last 14d: unq all: 1 14
 * notice: prev accum: outdated-unq outdated-all / unq all: 23 404 / 29 419
